--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="./images/Logo.svg" alt="Logo">
             </div>
             <div class="phone">
-                <p> <img src="./images/Vector.svg" alt="">+359884 008 008</p> <!-- Moved phone number to the left -->
+                <p> <img src="./images/Vector.svg" alt="">+359884 008 008</p>
             </div>
             <nav>
                 <ul>
