--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><a href="#">Локация</a></li>
                     <li><a href="#">За проекта</a></li>
                     <li><a href="#">Къщи</a></li>
+                    <li><a href="#">Етапи на строителство</a></li>
                     <li><a href="#">Галерия</a></li>
                     <li><a href="#">Контакти</a></li>
                 </ul>
