--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="./images/Logo.svg" alt="Logo">
             </div>
             <div class="phone">
-                <p class="specColor"><img src="./images/Vector.svg" alt="">+359884 008 008</p>
+                <p class="specColor"><img src="./images/Vector.svg" alt="+359884 008 008">+359884 008 008</p>
             </div>
             <nav>
                 <button class="nav-toggle" aria-label="Toggle navigation">
@@ -217,7 +217,7 @@
             <form action="/submit_form.php" method="post" enctype="multipart/form-data" autocomplete="on" novalidate>
                 <label for="name">Име и фамилия <span>*</span></label>
                 <input type="text" id="name" name="name" placeholder="Име и фамилия" required minlength="2"
-                    maxlength="50" pattern="[A-Za-zА-Яа-яЁё\s]+" title="Моля, въведете валидно име и фамилия">
+                    maxlength="50" pattern="[A-Za-zА]+" title="Моля, въведете валидно име и фамилия">
 
                 <label for="phone">Телефон <span>*</span></label>
                 <input type="tel" id="phone" name="phone" placeholder="Телефон" required minlength="10" maxlength="15"
