--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
                 <img src="./images/Logo.svg" alt="Logo">
             </div>
             <div class="phone">
-                <p class="specColor"><img src="./images/Vector.svg" alt="+359884 008 008">+359884 008 008</p>
+                <a href="tel:+359884008008" class="phone-link">
+                    <img src="./images/Vector.svg" alt="Phone Icon">
+                    <p class="specColor">+359884 008 008</p>
+                </a>
             </div>
             <nav>
                 <button class="nav-toggle" aria-label="Toggle navigation">
@@ -45,6 +48,7 @@
             <h1>Проследете <span>Изграждането</span><br> на своя нов дом</h1>
         </div>
     </header>
+       
 
     <section class="frame-parent section">
         <div class="project-group">
