--- a/index.html
+++ b/index.html
@@ -49,45 +49,37 @@
         </div>
     </header>
 
-    <section class="frame-parent section">
-        <div class="project-group">
-            <div class="start-group">
-                <p class="project-title">НАЧАЛО НА ПРОЕКТА</p>
-                <h3 class="project-date specColor">Октовмри 2023</h3>
-            </div>
-            <div class="end-group">
-                <p class="project-title">КРАЙ НА ПРОЕКТА</p>
-                <h3 class="project-date specColor">Април 2025</h3>
-            </div>
-        </div>
-
-        <div class="loading">
-            <div class="loading-container">
-                <div class="loading-line"></div>
-                <div class="loading-line"></div>
-                <div class="loading-line"></div>
-            </div>
-        </div>
-
-        <div class="phase-group">
-            <div class="phase">
+    <section id="frame-parent" class="section">
+        <div class="first-phase">
+            <div class="first-phase-bar" data-progress="100%"></div>
+            <div class="first-phase-info">
                 <h2 class="phase-title">Фаза 1</h2>
                 <p class="phase-date">Акт 16 - декември 2023 г.</p>
             </div>
-            <div class="phase">
+        </div>
+        <div class="second-phase">
+            <div class="second-phase-bar" data-progress="100%"></div>
+            <div class="second-phase-info">
                 <h2 class="phase-title">Фаза 2</h2>
                 <p class="phase-date">Акт 16 - юни 2025 г.</p>
             </div>
-            <div class="phase">
+        </div>
+        <div class="third-phase">
+            <div class="third-phase-bar" data-progress="70%"></div>
+            <div class="third-phase-info">
                 <h2 class="phase-title">Фаза 3</h2>
-                <p class="phase-date">Акт 16 - дек. 2025 г.</p>
+                <p class="phase-date">Акт 16 - декември 2025 г.</p>
             </div>
-            <div class="phase">
+        </div>
+        <div class="fourth-phase">
+            <div class="fourth-phase-bar" data-progress="0%"></div>
+            <div class="fourth-phase-info">
                 <h2 class="phase-title">Фаза 4</h2>
                 <p class="phase-date">юни 2026</p>
             </div>
         </div>
     </section>
+    
 
     <section class="stages section">
         <h3>етапи</h3>
