--- a/index.html
+++ b/index.html
@@ -50,37 +50,48 @@
     </header>
 
     <section id="frame-parent" class="section">
-        <div class="first-phase">
-            <div class="first-phase-bar" data-progress="100%"></div>
-            <div class="first-phase-info">
-                <h2 class="phase-title">Фаза 1</h2>
-                <p class="phase-date">Акт 16 - декември 2023 г.</p>
+        <div class="project-header">
+            <div class="start-group">
+                <p class="project-title">НАЧАЛО НА ПРОЕКТА</p>
+                <h3 class="project-date specColor">Октовмри 2023</h3>
+            </div>
+            <div class="end-group">
+                <p class="project-title">КРАЙ НА ПРОЕКТА</p>
+                <h3 class="project-date specColor">Април 2025</h3>
             </div>
         </div>
-        <div class="second-phase">
-            <div class="second-phase-bar" data-progress="100%"></div>
-            <div class="second-phase-info">
-                <h2 class="phase-title">Фаза 2</h2>
-                <p class="phase-date">Акт 16 - юни 2025 г.</p>
+        <div class="phases">
+            <div class="phase">
+                <div class="phase-bar first-phase-bar" data-progress="100%"></div>
+                <div class="phase-info">
+                    <h2 class="phase-title">Фаза 1</h2>
+                    <p class="phase-date">Акт 16 - декември 2023 г.</p>
+                </div>
             </div>
-        </div>
-        <div class="third-phase">
-            <div class="third-phase-bar" data-progress="70%"></div>
-            <div class="third-phase-info">
-                <h2 class="phase-title">Фаза 3</h2>
-                <p class="phase-date">Акт 16 - декември 2025 г.</p>
+            <div class="phase">
+                <div class="phase-bar second-phase-bar" data-progress="100%"></div>
+                <div class="phase-info">
+                    <h2 class="phase-title">Фаза 2</h2>
+                    <p class="phase-date">Акт 16 - юни 2025 г.</p>
+                </div>
             </div>
-        </div>
-        <div class="fourth-phase">
-            <div class="fourth-phase-bar" data-progress="0%"></div>
-            <div class="fourth-phase-info">
-                <h2 class="phase-title">Фаза 4</h2>
-                <p class="phase-date">юни 2026</p>
+            <div class="phase">
+                <div class="phase-bar third-phase-bar" data-progress="70%"></div>
+                <div class="phase-info">
+                    <h2 class="phase-title">Фаза 3</h2>
+                    <p class="phase-date">Акт 16 - декември 2025 г.</p>
+                </div>
+            </div>
+            <div class="phase">
+                <div class="phase-bar fourth-phase-bar" data-progress="0%"></div>
+                <div class="phase-info">
+                    <h2 class="phase-title">Фаза 4</h2>
+                    <p class="phase-date">юни 2026</p>
+                </div>
             </div>
         </div>
     </section>
     
-
     <section class="stages section">
         <h3>етапи</h3>
         <div class="rectangle-parent">
@@ -251,6 +262,7 @@
         </div>
     </footer>
 
+    <script src="./js/index.js"></script> 
 </body>
 
 </html>
