--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
                     <p class="specColor">+359884 008 008</p>
                 </a>
             </div>
-            <nav>
-                <button class="nav-toggle" aria-label="Toggle navigation">
-                    <span class="hamburger"></span>
-                </button>
+            <nav class="screen-nav">
                 <ul>
                     <li><a href="#">Локация</a></li>
                     <li><a href="#">За проекта</a></li>
@@ -46,6 +43,40 @@
         <div class="banner-bg">
             <h3>Етапи на строителство</h3>
             <h1>Проследете <span>Изграждането</span><br> на своя нов дом</h1>
+        </div>
+        <div class="mobile-nav">
+            <div class="logo-wrapper">
+                <img src="./images/Logo-mobile.svg" alt="Logo">
+            </div>
+            <button class="hamburger-btn">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            <nav class="mobile-screen-nav">
+                <ul>
+                    <li><a href="#">Локация</a></li>
+                    <li><a href="#">За проекта</a></li>
+                    <li><a href="#">Къщи</a></li>
+                    <li><a href="#">Етапи на строителство</a></li>
+                    <li><a href="#">Галерия</a></li>
+                    <li><a href="#">Контакти</a></li>
+                </ul>
+                <div class="phone">
+                    <a href="tel:+359884008008" class="phone-link">
+                        <img src="./images/Vector.svg" alt="Phone Icon">
+                        <p class="specColor">+359884 008 008</p>
+                    </a>
+                </div>
+                <button class="btn">Запитване</button>
+            </nav>
+        </div>
+        <div class="banner-bg-mobile">
+            <img src="../images/hero.png" alt="Banner Image">
+            <div class="banner-text">
+                <h3>Етапи на строителство</h3>
+                <h1>Проследете <span>Изграждането</span><br> на своя нов <br> дом</h1>
+            </div>
         </div>
     </header>
 
