phases(not full), stages, news

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <p class="project-title">КРАЙ НА ПРОЕКТА</p>
                 <h3 class="project-date specColor">Април 2025</h3>
             </div>
-            <div class="mobile-nav-arrow">
-                <img src="./images/arrow.svg" alt="">
+            <div class="arrow">
+                <img id="mobile-nav-arrow" src="./images/arrow.svg" alt="">
             </div>
         </div>
         <div class="phases swiper-container">
@@ -126,9 +126,10 @@
                 </div>
             </div>
             <div class="swiper-pagination"></div>
+
         </div>
     </section>
-    
+      
     <section class="stages section">
         <h3>етапи</h3>
         <div class="rectangle-parent">
