--- a/index.html
+++ b/index.html
@@ -298,6 +298,16 @@
                 </ul>
             </div>
         </div>
+        <div class="mobile-down-footer">
+            <div class="footer-column">
+                <p>© 2024 prodesign</p>
+                <p>Условия за ползване</p>
+            </div>
+            <div class="footer-column">
+                <p>Политика за бисквитките</p>
+                <p>Политика за личните данни</p>
+            </div>
+        </div>
     </footer>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
